[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.7.3"
rand_pcg = "0.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = { version = "=0.2.73", features = ["nightly"] }

[profile.release]
#debug-assertions = true
panic = "abort"
debug = 1
codegen-units = 1
lto = "fat"

[profile.dev]
debug-assertions = true
